--- a/wandering-inn-stats-viewer/src/app/main-statistics/volume-character-occurence-radar/volume-character-occurence-radar.component.html
+++ b/wandering-inn-stats-viewer/src/app/main-statistics/volume-character-occurence-radar/volume-character-occurence-radar.component.html
@@ -1,1 +1,1 @@
-<app-smart-chart [options]="createVolumeCharacterMentionsChartOptions()"></app-smart-chart>
+<app-smart-chart *ngIf="chartOptions" [options]="chartOptions"></app-smart-chart>
