--- a/wandering-inn-stats-viewer/src/app/main-statistics/smart-chart/smart-chart.component.scss
+++ b/wandering-inn-stats-viewer/src/app/main-statistics/smart-chart/smart-chart.component.scss
@@ -2,3 +2,14 @@
   width: 100%;
   display: block;
 }
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
