--- a/wandering-inn-stats-viewer/src/app/app-navigation/app-navigation.component.html
+++ b/wandering-inn-stats-viewer/src/app/app-navigation/app-navigation.component.html
@@ -4,7 +4,7 @@
   <mat-list-item [routerLink]="['/volume', volume]" (click)="this.onClickNavigationItem.emit()" *ngFor="let volume of volumes" role="list">
     <a [routerLink]="['/volume', volume]" role="listitem">{{volume}}</a>
   </mat-list-item>
-  <div mat-subheader>Misc</div>
+  <div mat-subheader>Entities</div>
   <mat-list-item [routerLink]="['/character']"  (click)="this.onClickNavigationItem.emit()">
     <a [routerLink]="['/character']" role="listitem">Characters</a>
   </mat-list-item>
@@ -17,4 +17,9 @@
   <mat-list-item [routerLink]="['/unknown']"  (click)="this.onClickNavigationItem.emit()">
     <a [routerLink]="['/unknown']" role="listitem">Unknown Brackets</a>
   </mat-list-item>
+  <mat-divider></mat-divider>
+  <div mat-subheader>Misc</div>
+  <mat-list-item [routerLink]="['/truth']">A harsh truth</mat-list-item>
+  <mat-list-item [routerLink]="['/about']">About</mat-list-item>
+  <mat-list-item [routerLink]="['/impressum']">Impressum</mat-list-item>
 </mat-nav-list>
