--- a/wandering-inn-stats-viewer/src/app/generic-entity-mentions-statistics-view/generic-entity-mentions-statistics-view.component.html
+++ b/wandering-inn-stats-viewer/src/app/generic-entity-mentions-statistics-view/generic-entity-mentions-statistics-view.component.html
@@ -1,3 +1,4 @@
+TODO weighted mentions against max mantions of Volume
 <ng-container *ngIf="genericEntityStatistic">
   <h1>{{genericEntityStatistic.name}}</h1>
   <ul>
