--- a/wandering-inn-stats-viewer/src/app/main-statistics/main-statistics.component.html
+++ b/wandering-inn-stats-viewer/src/app/main-statistics/main-statistics.component.html
@@ -1,4 +1,4 @@
-<h5>Warning: This may contain spoilers for Volume 9. Also all mention statistics are REALLY REALLY innacurate and I can't fix it till I've started reading V9 or else I'd be spoiling myself non-stop ;-;</h5>
+<h5>Warning: This may contain spoilers for Volume 9. Also all character/skill/spell occurence statistics are widely inaccurate and I can't fix it till I've started reading V9 or else I'd be spoiling myself non-stop ;-;</h5>
 <div class="row">
   <app-chonker-number-info text="Volumes" [amount]="volumes"></app-chonker-number-info>
   <app-chonker-number-info text="Chapters" [amount]="chapters"></app-chonker-number-info>
